# devtool-ansible

./: .gitignore  main.py  pyproject.toml
project/: .gitignore  php.yml  tool.yml
project/inventory/: inventory.yml
project/roles/php/handlers/: main.yaml
project/roles/php/tasks/: main.yml  symfony-cli.yml
project/roles/php/vars/: main.yml
