[project]
name = "ansible-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible-runner>=2.4.0",
    "ansible>=11.3.0",
    "questionary>=2.1.0",
    "requests>=2.32.3",
    "typer>=0.15.2",
]

[dependency-groups]
dev = [
    "ansible-lint>=25.1.3",
]
